Fixed spacing and layout

--- a/css/resume.css
+++ b/css/resume.css
@@ -9,7 +9,7 @@ body {
 
 #resume-section-container {
   width: 60em;
-  height: 110em;
+  height: 111.5em;
   margin: auto;
   box-shadow: 5px 8px 40px;
   margin-top: 3em;
